--- a/lezioni/20_Serie.ipynb
+++ b/lezioni/20_Serie.ipynb
@@ -12,15 +12,15 @@
        "div.jp-MarkdownOutput {font-family: \"Times New Roman\", Times, serif;   \n",
        "    /* background-color: #eee;  */\n",
        "    /* border-left: 5px solid #00b5b4; */\n",
-       "    font-size: 14pt;\n",
-       "    line-height: 150%;\n",
+       "    font-size: 10pt;\n",
+       "    line-height: 140%;\n",
        "}\n",
        ".text_cell_render {\n",
        "    font-family: \"Times New Roman\", Times, serif;    \n",
        "    /* background-color: #eee;  */\n",
        "    /* border-left: 5px solid #00b5b4; */\n",
-       "    font-size: 18pt;\n",
-       "    line-height: 150%;\n",
+       "    font-size: 14pt;\n",
+       "    line-height: 140%;s\n",
        "}\n",
        "\n",
        "h1 {\n",
@@ -38,7 +38,7 @@
        "h3 {\n",
        "    font-size: large !important;\n",
        "    margin-top: 0ex !important;\n",
-       "    margin-bottom: 1ex !important;\n",
+       "    margin-bottom: 0ex !important;\n",
        "    padding-bottom: 0ex !important;\n",
        "}\n",
        "\n",
@@ -118,7 +118,7 @@
    ],
    "source": [
     "# RUN THIS CELL: it loads some style files\n",
-    "from IPython.display import HTML, display, Math\n",
+    "from IPython.display import HTML\n",
     "with open( './style/custom.css', 'r' ) as f: html_style = f.read()\n",
     "HTML( html_style )"
    ]
@@ -127,122 +127,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Uso del p-valore (esempio con test binomiale)\n",
+    "# Le serie\n",
     "\n",
-    "Abbiamo monete equilibrate e monete difettose. Le monete equilibrate hanno probabilità di successo $p=1/2$ le monete difettose hanno probabilità di successo ignota $p< 1/2$. Non conosciamo la frazione di monete difettose. Vogliamo fare il seguente test di ipotesi con una significatività $\\alpha=5\\%$:\n",
+    "Vogliamo dare un senso preciso a somme di infiniti addendi, diciamo $a_i$ con $i\\in{\\mathbb N}$, che chiameremo <mark>serie</mark> e indicheremo con\n",
     "\n",
-    "$H_0:\\kern3.5ex p=1/2\\quad$ ipotesi nulla\n",
+    "$\\qquad\\displaystyle\\sum_{i=0}^\\infty a_i$.\n",
     "\n",
-    "$H_A:\\kern3ex p< 1/2\\quad$ ipotesi alternativa\n",
+    "Formalmente definiamo \n",
     "\n",
-    "Per decidere tra equilibrata o difettosa, lanciamo la moneta $40$ volte e osserviamo $x=11$ successi. Possiamo rigettare l'ipotesi nulla con la significatività che ci siamo prefissi?"
+    "$\\qquad\\displaystyle\\sum_{i=0}^\\infty a_i\\ \\ =\\ \\ \\lim_{n\\to\\infty}\\sum_{i=0}^n a_i$.\n",
+    "\n",
+    "A parole diremo che la serie è il limite della <mark>successione delle somme parziali</mark>. Ovvero della successione\n",
+    "\n",
+    "$\\qquad\\displaystyle s_n\\ \\ =\\ \\ \\sum_{i=0}^n a_i$.\n",
+    "\n",
+    "Se il limite è finito, diremo che la serie <mark>converge</mark> se è infinito diremo che <mark>diverge</mark> altrimenti (cioè se il limiote non esiste) diremo che è è <mark>inteterminata</mark>."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metodo 1 (lungo)\n",
+    "# La serie geometrica\n",
     "\n",
-    "Calcoliamo la regione di rifiuto di un test con significatività $\\alpha$ e controlliamo se $x$, il risultato ottenuto, appartiene a questa regione. La zona di rifiuto ha la forma $[0, k_\\alpha]$ dove $k_\\alpha$ è un qualche numero che dipende da $\\alpha$.\n",
+    "Raramente si riesce a calcolare il valore di una serie convergente. Noi considereremo due casi fortunati. Il primo caso è quello è la serie geometrica.\n",
     "\n",
-    "$k_\\alpha$ è l'intero tale che $\\Pr( X\\le k_\\alpha)=\\alpha$ dove $X\\sim B(40,1/2)$. (Siccome la distribuzione è discreta potremmo non ottenere un intero $k_\\alpha$ che soddisfa uguaglianza in modo esatto, in questo caso prendiamo il $k_\\alpha$ che meglio approssima dal basso.)\n",
+    "Supponiamo $a_i=p^i$ per un qualche $p\\in{\\mathbb R}$. Proviamo a calcolare la successione delle somme parziali\n",
     "\n",
-    "La funzione che dato $\\alpha$ calcola il massimo $k_\\alpha$ tale che $\\Pr( X\\le k_\\alpha)\\le \\alpha$ si chiama funzione percentile (o quantile)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from scipy.stats import binom\n",
-    "k_alpha = binom.ppf(0.05, 40,0.5)\n",
-    "k_alpha"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Poiché $x = 11\\le 15 = k_\\alpha$, rifiuto l'ipotesi nulla."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Metodo 2 (p-valore)\n",
+    "$\\qquad\\displaystyle s_n\n",
+    "\\ \\ =\\ \\ \n",
+    "\\sum_{i=0}^n p^i$.\n",
     "\n",
-    "Per controllare se $x\\le k_\\alpha$ non serve calcolare $k_\\alpha$!!!\n",
+    "è chiaro che (separando l'ultimo termine della somma)\n",
     "\n",
-    "Osserviamo che $x\\le k_\\alpha$ se e solo se $\\Pr(X\\le x)\\le \\Pr( X\\le k_\\alpha)$.\n",
-    " Ma $\\Pr( X\\le k_\\alpha)$ è per definizione uguale ad $\\alpha$. Quindi rifiutiamo l'ipotesi nulla se $\\Pr(X\\le x)\\le \\alpha$.\n",
-    " \n",
-    "La probabilità $\\Pr(X\\le x)$ si chiama il <mark>p-valore</mark> dell'osservazione $x$.\n",
+    "$\\qquad\\displaystyle s_{n+1}\n",
+    "\\ \\ =\\ \\ \n",
+    "\\bigg(\\sum_{i=0}^n p^i\\bigg) + p^{n+1}$.\n",
     "\n",
-    "Nel nostro caso il p-valore è"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.003213288047845708"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_value = binom.cdf(11, 40,0.5)\n",
-    "p_value"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Poiché il p-valore $= 0.003 < 0.05 = \\alpha$ rifiuto l'ipotesi nulla."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "k_alpha = binom.ppf(0.05, 40,0.5)\n",
-    "k_alpha"
+    "$\\qquad\\displaystyle\\phantom{s_{n+1}}\n",
+    "\\ \\ =\\ \\ \n",
+    "s_n+ p^{n+1}$.\n",
+    "\n",
+    "Abbiamo anche (separando lil primo termine della somma) \n",
+    "\n",
+    "$\\qquad\\displaystyle s_{n+1}\n",
+    "\\ \\ =\\ \\ \n",
+    "1 + \\sum_{i=1}^{n+1} p^i$.\n",
+    "\n",
+    "$\\qquad\\displaystyle\\phantom{s_{n+1}}\n",
+    "\\ \\ =\\ \\ \n",
+    "1 + p\\sum_{i=0}^{n} p^i$.\n",
+    "\n",
+    "$\\qquad\\displaystyle\\phantom{s_{n+1}}\n",
+    "\\ \\ =\\ \\ \n",
+    "1 + p\\,s_n$.\n",
+    "\n",
+    "Abbiamo quindi che\n",
+    "\n",
+    "$\\qquad\\displaystyle\\left\\{\\begin{array}{lcl}\n",
+    "s_{n+1}&=&s_n+ p^{n+1}\\\\\n",
+    "s_{n+1}&=&1 + p\\,s_n\\\\\n",
+    "\\end{array}\\right.$\n",
+    "\n",
+    "e di conseguenza\n",
+    "\n",
+    "$\\qquad s_n+ p^{n+1}\\ =\\ 1 + p\\,s_n$\n",
+    "\n",
+    "Risolvendo per $s_n$ otteniamo \n",
+    "\n",
+    "$\\qquad$<mark style=\"padding:2ex;\">$s_n=\\dfrac{1 -p^{n+1}}{1-p}$</mark> \n",
+    "\n",
+    "Quindi a seconda del valore di $p$ ptteniamo \n",
+    "\n",
+    "\n",
+    "\n",
+    "$\\qquad\\displaystyle\\sum_{i=0}^\\infty p^i\n",
+    "\\ \\ =\\ \\ \n",
+    "\\left\\{\\begin{array}{ll}\n",
+    "\\textrm{converge a }\\dfrac{1}{1-p}&-1<p<1\\\\\n",
+    "\\textrm{diverge se}& 1\\le p\\\\[1ex]\n",
+    "\\textrm{indeterminata se}& p\\le -1\\\\\n",
+    "\\end{array}\\right.$"
    ]
   }
  ],
